--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -157,12 +157,15 @@
                     border-bottom: none;
                 }
 
-                a {
+                a,
+                span {
                     padding: 1.5rem 0 1.25rem 1.25rem;
                     text-decoration: none;
                     color: $terciary-color;
                     width: 100%;
                     height: 100%;
+                    z-index: 2;
+                    cursor: pointer;
                 }
 
                 i {
