--- a/styles/MapSection.module.scss
+++ b/styles/MapSection.module.scss
@@ -1,13 +1,19 @@
 @import "./essentials";
 
 .map-section {
-    display: flex;
-    height: 400px;
+    // display: flex;
+    // height: 340px;
+    // background-color: $color-blue-light;
+    // border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 
 
     &__left-img {
-        height: 100%;
+        max-height: 350px;
+        width: 100%;
+        // height: 100%;
         object-fit: cover;
+        // border-top-left-radius: 2rem;
+        border-bottom-left-radius: 1rem;
     }
 
     /*  &__right-img {
@@ -20,20 +26,13 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        background-color: $secondary-color;
-        width: -webkit-fill-available;
+        height: 100%;
+        // background-color: rgba($secondary-color, 0.1);
+        padding: 0 2rem;
 
-        h2 {
-            font-size: 4rem;
-            font-weight: 800;
-            letter-spacing: 3px;
-            color: #2C5D95;
-            // margin: 0
-        }
 
-        svg path {
-
-            fill: $primary-color;
+        p {
+            font-size: 1.25rem;
         }
     }
 }
