--- a/styles/Leer.module.scss
+++ b/styles/Leer.module.scss
@@ -1,21 +1,41 @@
 .pagina-leer {
-    padding: 2rem;
+    padding: 2rem 2rem 4rem;
 
-    &__title {
-        margin: 3rem 0;
+    &__top {
+
+        margin-bottom: 3rem;
+
+        &__img {
+            object-fit: cover;
+            border-radius: 4px;
+            // margin-right: 1rem;
+        }
+
+        &__title {
+            display: flex;
+            align-items: center;
+            padding: 0 2rem 0 0;
+            min-height: 230px;
+        }
+    }
+
+    &__slider {
+        margin-bottom: 6rem;
+
+
+        /* img {
+            height: 600px;
+            object-fit: cover;
+        } */
     }
 
     .refranes-container {
 
+        .title {
+            margin-bottom: 2rem;
+        }
 
         &__item {
-
-            font-size: 1.25rem;
-
-            margin-bottom: 1.5rem;
-            /* p {
-            } */
-
             &--correct {
 
                 div {
@@ -31,6 +51,30 @@
             }
         }
 
+
+        &__significados {
+
+            font-size: 1.25rem;
+
+            margin-bottom: 1.5rem;
+            /* p {
+            } */
+
+            /* &--correct {
+
+                div {
+                    color: rgb(9, 212, 9) !important;
+                }
+            }
+
+            &--wrong {
+
+                div {
+                    color: red !important;
+                }
+            } */
+        }
+
         &__button {
             // display: flex;
             // justify-content: center;
@@ -40,6 +84,26 @@
             /*  button {
                 
             } */
+        }
+
+        &__refranes {
+            margin-bottom: 3rem;
+
+            .title {
+                margin-bottom: 2rem;
+            }
+
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                padding-left: 1rem;
+
+                li {
+                    margin-bottom: 1.5rem;
+                    font-size: 1.25rem;
+                }
+            }
+
         }
 
         &__enviar-tarea {
