--- a/styles/VideoSection.module.scss
+++ b/styles/VideoSection.module.scss
@@ -37,8 +37,7 @@
 
         video,
         .react-player__preview {
-            border-top-right-radius: 1rem;
-            border-bottom-right-radius: 1rem;
+            border-radius: 0.5rem;
         }
     }
 }
