--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,8 @@
-$primary-color: #AE363A;
-$secondary-color: #F4AA61;
-$terciary-color: #2C5D95;
-$color-white: #FDF5E6;
-$color-green: #2E5A4B;
+$primary-color: #AF3134;
+// $secondary-color: #F4AA61;
+$secondary-color: #F5C03C;
+$terciary-color: #2B5E95;
+$color-blue-light: #B8E4ED;
+$color-white: #FFFFFF;
+$color-green: #2B5A4A;
+$color-brown: #6F544D;
