--- a/styles/AudioPlayer.module.scss
+++ b/styles/AudioPlayer.module.scss
@@ -157,7 +157,7 @@ $transition: .3s all ease;
                 &.play {
                     width: 50px;
                     height: 50px;
-                    border: 1px solid #e2e2e2;
+                    // border: 1px solid #e2e2e2;
 
                     &:hover {
                         left: 0;
