--- a/styles/Escuchar.module.scss
+++ b/styles/Escuchar.module.scss
@@ -2,12 +2,15 @@
     // min-height: 100vh;
 
     &__top {
-        padding: 2rem;
+        padding: 2rem 2rem 0 2rem;
 
         &__title {
             padding: 0 2rem 0 0;
-            // margin: 3rem 0 2rem;
 
+            // margin: 3rem 0 2rem;
+            .title {
+                margin-bottom: 2rem;
+            }
 
             p {
                 font-size: 1.25rem;
@@ -17,7 +20,7 @@
 
     &__title {
         padding: 2rem 2rem 0;
-        margin: 3rem 0 2rem;
+        margin: 0 0 2rem;
 
         h6 {
             font-size: 1.5rem;
@@ -38,7 +41,7 @@
 
         &__item {
             margin-bottom: 1rem;
-            height: 190px;
+            height: 189px;
             border: 4px solid $secondary-color;
             border-radius: 8px;
 
@@ -49,7 +52,7 @@
                 }
 
                 video {
-                    border-radius: 8px;
+                    border-radius: 4px;
                 }
             }
         }
