--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -20,20 +20,20 @@
         cursor: pointer;
 
         h1 {
-            font-size: 4rem;
-            font-weight: 800;
+            font-size: 3.5rem;
+            font-weight: 600;
             // letter-spacing: 3px;
             color: $color-white;
             margin: 0;
 
             span {
                 text-transform: capitalize;
-                color: $secondary-color;
+                // color: $secondary-color;
             }
         }
 
         &__flag {
-            max-width: 200px;
+            max-width: 150px;
 
             img {
                 width: 100%;
@@ -56,7 +56,7 @@
                 position: absolute;
                 content: '';
                 height: 4rem;
-                width: 4rem;
+                width: 3.5rem;
                 top: 0;
                 right: 0;
                 cursor: pointer;
@@ -136,6 +136,8 @@
             background-color: $color-white;
             transform: translateX(200%);
             transition: transform 300ms;
+            z-index: 3;
+            box-shadow: -1px 2px 15px 1px rgba($color: black, $alpha: 0.1);
 
             ul {
                 margin-top: 0px;
