--- a/styles/Leer.module.scss
+++ b/styles/Leer.module.scss
@@ -3,7 +3,7 @@
 
     &__top {
 
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
 
         &__img {
             object-fit: cover;
@@ -15,13 +15,53 @@
             display: flex;
             align-items: center;
             padding: 0 2rem 0 0;
-            min-height: 230px;
+            min-height: 205px;
         }
     }
 
     &__slider {
         margin-bottom: 6rem;
 
+        .slick-dots {
+
+            li button::before {
+                width: 1.5rem;
+                height: 1.5rem;
+                line-height: 1.5rem;
+                font-size: 0.75rem;
+                color: $terciary-color;
+            }
+
+        }
+
+        .slick-next,
+        .slick-prev {
+            width: 2.5rem;
+            height: 2.5rem;
+
+            &::before {
+                font-size: 2.5rem;
+                color: $secondary-color;
+            }
+
+        }
+
+        .slick-next {
+            right: 0;
+
+            @media screen and(max-width: 576px) {
+                right: -1.5rem;
+            }
+        }
+
+        .slick-prev {
+            @media screen and(max-width: 576px) {
+                left: -1.5rem;
+            }
+
+            left: 0;
+            z-index: 1;
+        }
 
         /* img {
             height: 600px;
