--- a/styles/MapSection.module.scss
+++ b/styles/MapSection.module.scss
@@ -10,15 +10,9 @@
     &__left-img {
         max-height: 350px;
         width: 100%;
-        // height: 100%;
         object-fit: cover;
-        // border-top-left-radius: 2rem;
-        border-bottom-left-radius: 1rem;
+        border-radius: 0.5rem;
     }
-
-    /*  &__right-img {
-        width: 100%;
-    } */
 
     &__right {
         font-size: 4rem;
