--- a/styles/TeacherInfo.module.scss
+++ b/styles/TeacherInfo.module.scss
@@ -1,11 +1,33 @@
 @import "./essentials";
 
 .teacher {
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    padding-top: 2rem;
+
     .row {
         .col-sm-3 {
-            img {
-                max-width: 100%;
-                border-top-left-radius: 1rem;
+            .teacher__info__images {
+                height: 100%;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                flex-direction: column;
+
+                div {
+                    &:first-child {
+                        border-radius: 0.5rem;
+                    }
+                }
+
+
+                img {
+                    object-fit: cover;
+
+                    /*  &:first-child {
+                        border-radius: 50%;
+                    } */
+
+                }
             }
         }
 
@@ -16,7 +38,6 @@
                 flex-direction: column;
                 padding: 1rem 1rem 1rem 0;
                 height: 100%;
-                align-items: center;
 
                 h5 a {
                     text-decoration: none;
@@ -29,17 +50,23 @@
 
 .hecho-con-amor {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     font-size: 2.5rem;
+    width: 100%;
 
     h2 {
         font-size: 2.5rem;
         font-weight: 600;
         margin-right: 1.5rem;
+        margin-bottom: 0;
         // letter-spacing: 3px;
         color: $terciary-color;
         // margin: 0
+    }
+
+    &__icon {
+        width: 2.5rem;
     }
 
     svg path {
