--- a/styles/_essentials.scss
+++ b/styles/_essentials.scss
@@ -1,3 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+// @import "~slick-carousel/slick/slick.css";
+
+// @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap');
 @import "./variables"
