--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,4 +5,9 @@
 @import "./MapSection.module.scss";
 @import "./TeacherInfo.module.scss";
 @import "./VideoSection.module.scss";
+@import "./Escuchar.module.scss";
+@import "./Escribir.module.scss";
+@import "./Leer.module.scss";
+@import "./Hablar.module.scss";
+@import "./AudioPlayer.module.scss";
 @import "./globals.scss";
