--- a/styles/Escribir.module.scss
+++ b/styles/Escribir.module.scss
@@ -30,6 +30,16 @@
             font-size: 1.25rem;
             margin: 0.5rem 0;
 
+
+
+            &__text {
+                display: flex;
+
+                @media screen and(max-width: 576px) {
+                    flex-direction: column-reverse;
+                }
+            }
+
             &__number {
                 margin-right: 8px;
                 color: $secondary-color;
@@ -47,6 +57,12 @@
                 div {
                     color: red !important;
                 }
+            }
+        }
+
+        .col-md-5 {
+            @media screen and(max-width: 576px) {
+                margin-top: 3rem;
             }
         }
 
