--- a/styles/Escuchar.module.scss
+++ b/styles/Escuchar.module.scss
@@ -7,6 +7,10 @@
         &__title {
             padding: 0 2rem 0 0;
 
+            @media screen and(max-width: 768px) {
+                padding: 0;
+            }
+
             // margin: 3rem 0 2rem;
             .title {
                 margin-bottom: 2rem;
