--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -26,6 +26,14 @@
             color: $color-white;
             margin: 0;
 
+            @media screen and(max-width: 576px) {
+                font-size: 3rem;
+            }
+
+            @media screen and(max-width: 380px) {
+                font-size: 2.6rem;
+            }
+
             span {
                 text-transform: capitalize;
                 // color: $secondary-color;
@@ -34,6 +42,14 @@
 
         &__flag {
             max-width: 150px;
+
+            @media screen and(max-width: 576px) {
+                max-width: 100px;
+            }
+
+            @media screen and(max-width: 380px) {
+                max-width: 80px;
+            }
 
             img {
                 width: 100%;
@@ -46,6 +62,10 @@
         position: relative;
         width: fit-content;
         margin-right: 2rem;
+
+        @media screen and(max-width: 380px) {
+            margin-right: 1.5rem;
+        }
 
         &__bar {
             display: block;
@@ -171,6 +191,7 @@
                 }
 
                 i {
+                    width: 2rem;
                     margin-right: 1.5rem;
                     color: $secondary-color;
                 }
