--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -8,13 +8,7 @@
     box-shadow: 1px 2px 15px 1px rgba($color: black, $alpha: 0.1);
     min-height: 100vh;
     width: 100%;
-}
-
-.page {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow-x: hidden;
 }
 
 .pagina-inicio {
