--- a/styles/Leer.module.scss
+++ b/styles/Leer.module.scss
@@ -30,6 +30,21 @@
                 line-height: 1.5rem;
                 font-size: 0.75rem;
                 color: $terciary-color;
+
+                @media screen and(max-width: 576px) {
+                    width: 1rem;
+                    height: 1rem;
+                    line-height: 1rem;
+                    font-size: 0.5rem;
+                }
+            }
+
+            li {
+                @media screen and(max-width: 576px) {
+                    width: 1rem;
+                    height: 1rem;
+                    margin: 0;
+                }
             }
 
         }
