--- a/styles/VideoSection.module.scss
+++ b/styles/VideoSection.module.scss
@@ -3,13 +3,18 @@
     justify-content: center;
     padding: 4rem 0;
     height: 500px;
-    // background-color: rgba($terciary-color, 0.1);
-    // padding: 0 1.5rem 0 0;
 
-    /* .row {
-        display: flex;
-        justify-content: center;
-    } */
+    @media screen and(max-width: 576px) {
+        height: auto;
+        padding: 3rem 0;
+    }
+
+    .row {
+        @media screen and(max-width: 576px) {
+            flex-direction: column-reverse;
+            flex-wrap: nowrap;
+        }
+    }
 
     &__desc {
         height: 100%;
@@ -17,6 +22,12 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        @media screen and(max-width: 576px) {
+            margin-bottom: 3rem;
+            padding-right: 0;
+            display: block;
+        }
 
         p {
             font-size: 1.25rem;
@@ -38,6 +49,16 @@
         video,
         .react-player__preview {
             border-radius: 0.5rem;
+        }
+    }
+
+    .col-md-7 {
+        @media screen and(max-width: 576px) {
+            min-height: 20rem;
+        }
+
+        @media screen and(max-width: 380px) {
+            min-height: 15rem;
         }
     }
 }
