--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -31,7 +31,7 @@
             }
 
             @media screen and(max-width: 380px) {
-                font-size: 2.6rem;
+                font-size: 2rem;
             }
 
             span {
@@ -72,6 +72,10 @@
             height: 4rem;
             text-align: center;
 
+            @media screen and(max-width: 576px) {
+                height: 3rem;
+            }
+
             &__clicker {
                 position: absolute;
                 content: '';
@@ -81,41 +85,69 @@
                 right: 0;
                 cursor: pointer;
                 z-index: 9;
+
+                @media screen and(max-width: 576px) {
+                    height: 3rem;
+                    width: 2.5rem;
+                }
+
             }
 
             &__hamburguer {
                 position: relative;
-                width: 4rem;
+                width: 3.5rem;
                 height: 4rem;
                 float: left;
                 transition: .5s ease-in-out;
                 cursor: pointer;
 
+                @media screen and(max-width: 576px) {
+                    height: 3rem;
+                    width: 2.5rem;
+                }
+
+
                 span {
                     position: absolute;
-                    height: 8px;
+                    height: 0.5rem;
                     width: 100%;
                     vertical-align: middle;
                     // margin: 20px 0 0 15px;
                     background: $color-white;
-                    border-radius: 8px;
+                    border-radius: 0.5rem;
                     opacity: 1;
                     right: 0;
                     transform: rotate(0deg);
                     transition: .25s ease-in-out;
                     padding: 0px;
 
+                    @media screen and(max-width: 576px) {
+                        height: 0.375rem;
+                    }
+
                     &:nth-child(1) {
                         top: 0.5rem;
+
+                        @media screen and(max-width: 576px) {
+                            top: 0.375rem;
+                        }
                     }
 
                     &:nth-child(2),
                     &:nth-child(3) {
-                        top: calc(2rem - 4px);
+                        top: calc(2rem - 0.25rem);
+
+                        @media screen and(max-width: 576px) {
+                            top: calc(1.5rem - 0.1875rem);
+                        }
                     }
 
                     &:nth-child(4) {
                         bottom: 0.5rem;
+
+                        @media screen and(max-width: 576px) {
+                            bottom: 0.375rem;
+                        }
                     }
                 }
             }
