setup components to fetch content from strapi

--- a/styles/Leer.module.scss
+++ b/styles/Leer.module.scss
@@ -20,6 +20,10 @@
     }
 
     &__slider {
+        h1 {
+            margin: 3rem 0;
+        }
+
         margin-bottom: 6rem;
 
         .slick-dots {
