--- a/styles/Escribir.module.scss
+++ b/styles/Escribir.module.scss
@@ -16,12 +16,31 @@
         &__title {
             display: flex;
             align-items: center;
+            flex-direction: column;
             padding: 0 2rem 0 0;
             min-height: 165px;
+
+            h1 {
+                width: 100%;
+                margin-bottom: 1.5rem;
+            }
+
+            p {
+                font-size: 1.25rem;
+            }
         }
     }
 
     .refranes-container {
+
+        ul {
+
+            li::before {
+                content: "•";
+                color: $secondary-color;
+                margin-right: 0.5rem;
+            }
+        }
 
 
         &__item {
