--- a/styles/Hablar.module.scss
+++ b/styles/Hablar.module.scss
@@ -19,8 +19,8 @@
             padding: 0 2rem 0 0;
             min-height: 130px;
 
-            h6 {
-                font-size: 1.5rem;
+            p {
+                font-size: 1.25rem;
             }
         }
     }
