--- a/styles/MapSection.module.scss
+++ b/styles/MapSection.module.scss
@@ -31,5 +31,10 @@
         p {
             font-size: 1.25rem;
         }
+
+        .title {
+            width: 100%;
+            margin-bottom: 1.5rem;
+        }
     }
 }
