Created guia page with content from strapi

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,5 +9,6 @@
 @import "./Escribir.module.scss";
 @import "./Leer.module.scss";
 @import "./Hablar.module.scss";
+@import "./Guia.module.scss";
 @import "./AudioPlayer.module.scss";
 @import "./globals.scss";
