small change in layout

--- a/styles/Leer.module.scss
+++ b/styles/Leer.module.scss
@@ -166,6 +166,8 @@
         }
 
         &__enviar-tarea {
+            margin-bottom: 4rem;
+
             p {
                 font-size: 1.25rem;
             }
@@ -177,6 +179,23 @@
                 }
             }
         }
+    }
+
+    &__cuestionario {
+        margin-top: 2rem;
+
+        p {
+            font-size: 1.25rem;
+            margin-bottom: 2rem;
+        }
+
+        a {
+            &:hover {
+                text-decoration: none;
+            }
+        }
+
+
     }
 
 }
